Configurando banco de dados Postgres e criando Model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+#CONFIGURAÇÃO POSTGRES
+spring.datasource.url=jdbc:postgresql://localhost:5432/produtos-apirest
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
